--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Attendance-Management-System
+
+spring.datasource.url=jdbc:mysql://localhost:3306/AMS
+# Database username
+spring.datasource.username=root
+# Database password
+spring.datasource.password=@abbassadiq
+# MySQL JDBC Driver class name
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Settings
+# Automatically update the database schema based on your entity classes
+spring.jpa.hibernate.ddl-auto=update
+# Show SQL queries in the console
+spring.jpa.show-sql=true
+# Format SQL queries in the console for better readability
+spring.jpa.properties.hibernate.format_sql=true
