--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Attendance-Management-System
-
+# Create dataBase on your pc AMS and just link here.....
 spring.datasource.url=jdbc:mysql://localhost:3306/AMS
 # Database username
 spring.datasource.username=root
-# Database password
-spring.datasource.password=@abbassadiq
+# Database password add your own database Password
+spring.datasource.password=yourpwd
 # MySQL JDBC Driver class name
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
