--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/AMS
 # Database username
 spring.datasource.username=root
 # Database password add your own database Password
-spring.datasource.password=yourpwd
+spring.datasource.password=@abbassadiq
 # MySQL JDBC Driver class name
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
